# finetuning

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: deploy.yaml
configs/: example_dpo.yaml  example_lora.yaml
docs/slides/: slides.pptx  ~$slides.pptx
notebooks/: dpo.ipynb  lora.ipynb  rl.ipynb
notebooks/solutions/: dpo_solutions.ipynb  lora_solutions.ipynb
src/finetuning/: _config.py  _defaults.py  _utils.py
