[project]
name = "finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
    "pre-commit>=4.5.1",
]
